<resources>
    <string name="app_name">Movfast</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="main_screen_rent_car"> <u>Rent a car</u> </string>
    <string name="main_screen_rent_motorcycle"> <u>Rent a motorcycle</u></string>
    <string name="main_screen_rent_bike"> <u>Rent a bike</u></string>
    <string name="main_screen_rent_scooter"> <u>Rent a scooter</u> </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="complete_order">Complete Order</string>
    <string name="backbutton">backButton</string>
    <string name="taxiimage">taxiImage</string>
    <string name="text">text</string>
    <string name="taxi_image">taxi Image</string>
    <string name="name_page">name_page</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="wallet">Wallet</string>
    <string name="available">Available</string>
    <string name="Available">Available:</string>
    <string name="textview">TextView</string>
    <string name="taxi">Taxi</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="find_a_cab">Find a cab!</string>
    <string name="estimated_final_cost">Estimated final cost:</string>
    <string name="pickup_cost">Pickup cost:</string>
    <string name="estimated_cost">Estimated cost:</string>
    <string name="in_city_choose_vehicle">"Choose a"</string>
    <string name="main_screen_taxi">Call a cab now</string>
    <string name="location">Location:</string>
    <string name="cars_nearby">Cars nearby</string>
    <string name="motorcycles_nearby">Motorcycles nearby</string>
    <string name="bicycles_nearby">Bicycles nearby</string>
    <string name="scooters_nearby">Scooters nearby</string>
    <string name="distance">Distance</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="locate">Locate</string>
    <string name="destination">Destination</string>
    <string name="movfast">movfast</string>
    <string name="sign_in_to">Sign in to continue to our services!</string>
    <string name="label">Username or email</string>
    <string name="pass">Password</string>
    <string name="fireitup">Fire It Up!</string>
    <string name="newHere">Are you new here?</string>
    <string name="signUp">Sign Up</string>
    <string name="asterisk">*</string>
    <string name="username">Username(What others will see you as)</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone Number</string>
    <string name="driversLicense">Driver\'s License</string>
    <string name="alrUser">Already a user?</string>
    <string name="signIn">Sign In instead</string>
    <string name="signUpNow">Sign Up Now!</string>
    <string name="vehicle_location">Vehicle Location</string>
    <string name="button">button</string>
    <string name="maplocation">mapLocation</string>
    <string name="unlockbutton">unlockButton</string>
    <string name="you_will_transferred_to_your_camera_to_scan_a_qr_code_make_sure_to_allow_all_permitions">You will transferred to your camera to scan a QR code. Make sure to allow all permitions.</string>
    <string name="fieldsWith">Fields with * are obligatory!</string>
    <string name="getStarted">Get started!</string>
    <string name="checkBox">By signing up, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="addDriversLicense">Add a driver\'s license</string>
    <string name="expDateText">Exp.Date</string>
    <string name="ownerText">Card Owner</string>
    <string name="ccvText">CCV</string>
    <string name="cardNumText">Card Number</string>
    <string name="addCard">Add your card</string>
    <string name="remCardText">Remove your card</string>
    <string name="remCard">Or remove one?</string>
    <string name="nav_home">Home</string>
    <string name="nav_in_city">In City</string>
    <string name="nav_out_city">Out City</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="welcome_to">Welcome to</string>
    <string name="walletInfo">Wallet Info</string>
    <string name="chargeWallet">Charge your wallet?</string>
    <string name="completeCharge">Complete Charge</string>
    <string name="amount">Amount to Add:</string>
    <string name="attachPhoto">Attach Photo</string>
    <string name="sendForReview">Send for review</string>
    <string name="drivingsPhoto">Driving\'s license photo will appear here:</string>
    <string name="driversLic">Drivers\'s License</string>
    <string name="frontSide">Front Side:</string>
    <string name="backSide">Back Side:</string>
    <string name="leftSide">Left Side:</string>
    <string name="rightSide">Right Side:</string>
    <string name="sendPhotos">Send photos and end ride</string>
    <string name="vehicleForm">Vehicle photos form</string>
    <string name="points">Points gained:</string>
    <string name="cost">Cost:</string>
    <string name="time">Duration:</string>
    <string name="suppFiles">To make sure everything is okay with the vehicle, it is necessary that you send 4 photos of the vehicle,1 on each side. (Supported files: .jpg, .png)</string>
    <string name="rideSum">Ride Summary</string>
    <string name="succInsert">Insertion successful</string>
    <string name="underRev">Your driver’s license will be under review.</string>
    <string name="main_screen_in_city">In City</string>
    <string name="main_screen_out_city">Out City</string>
    <string name="choose_a_garage">Choose a garage</string>
    <string name="selected_garage_information">Selected Garage Information</string>
    <string name="out_city_popup_continue">Continue</string>
    <string name="out_city_popup_cancel">Cancel</string>
    <string name="selected_vehicle_information">Selected Vehicle Information</string>
    <string name="out_city_rate">Rate:</string>
    <string name="out_city_seats">Seats:</string>
    <string name="out_city_license">License Plate:</string>
    <string name="confirm_location">Confirm location</string>
    <string name="choose_your_location">Choose your location</string>
    <string name="unlock_vehicle">Unlock vehicle</string>
    <string name="pickup_cost_1_5">Pickup cost: 1.5€</string>
    <string name="accept">Accept</string>
    <string name="requests">Requests</string>
    <string name="requestimage">RequestImage</string>
    <string name="profile">Profile</string>
    <string name="profileimagebutton">profileImageButton</string>
    <string name="activity">Activity</string>
    <string name="activityimagebutton">activityImageButton</string>
    <string name="select_a_vehicle">Select a vehicle</string>
    <string name="car_image">car image</string>
    <string name="scooter_image">scooter image</string>
    <string name="motorcycle_image">motorcycle image</string>
    <string name="bike_image">bike image</string>
    <string name="taxi_image_2">taxi image</string>
    <string name="rating_comment">Comment (max 150 chars):</string>
    <string name="mail">Email</string>
    <string name="waiting_for_the_taxi_ride_to_end">Waiting for the taxi ride to end</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="payment_methods">Payment methods</string>
    <string name="points2">Points gained</string>
    <string name="logout">Logout</string>
    <string name="adddriversLicense">Add a driver\'s license</string>
    <string name="timesec">Duration(min):</string>
    <string name="requests_taxi">Requests</string>


</resources>