<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/signUpButton"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#000000"
        android:text="@string/getStarted"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/asterisk1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:gravity="start"
            android:lineSpacingExtra="3sp"
            android:text="@string/asterisk"
            android:textAppearance="@style/label" />

        <RelativeLayout
            android:id="@+id/usernameField"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_gravity="center|start"
            android:layout_marginVertical="4dp"
            android:background="@drawable/username_email"
            android:gravity="center"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="480dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:lineSpacingExtra="3sp"
                android:text="@string/username"
                android:textAppearance="@style/label" />

        </RelativeLayout>

        <TextView
            android:id="@+id/asterisk2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:gravity="start"
            android:lineSpacingExtra="3sp"
            android:text="@string/asterisk"
            android:textAppearance="@style/label" />

        <RelativeLayout
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_gravity="center|start"
            android:layout_marginVertical="4dp"
            android:background="@drawable/username_email"
            android:gravity="center"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="278dp">

            <TextView
                android:id="@id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:lineSpacingExtra="3sp"
                android:text="@string/password"
                android:textAppearance="@style/label" />
        </RelativeLayout>

        <TextView
            android:id="@+id/asterisk3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:gravity="start"
            android:lineSpacingExtra="3sp"
            android:text="@string/asterisk"
            android:textAppearance="@style/label" />

        <RelativeLayout
            android:id="@+id/nameField"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_gravity="center|start"
            android:layout_marginVertical="4dp"
            android:background="@drawable/username_email"
            android:gravity="center"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="426dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:lineSpacingExtra="3sp"
                android:text="@string/name"
                android:textAppearance="@style/label" />

        </RelativeLayout>

        <TextView
            android:id="@+id/asterisk4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:gravity="start"
            android:lineSpacingExtra="3sp"
            android:text="@string/asterisk"
            android:textAppearance="@style/label" />

        <RelativeLayout
            android:id="@+id/surnameField"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_gravity="center|start"
            android:layout_marginVertical="4dp"
            android:background="@drawable/username_email"
            android:gravity="center"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="373dp">

            <TextView
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:lineSpacingExtra="3sp"
                android:text="@string/surname"
                android:textAppearance="@style/label" />

        </RelativeLayout>

        <TextView
            android:id="@+id/asterisk5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:gravity="start"
            android:lineSpacingExtra="3sp"
            android:text="@string/asterisk"
            android:textAppearance="@style/label" />

        <RelativeLayout
            android:id="@+id/phoneNumberField"
            android:layout_width="fill_parent"
            android:layout_height="41dp"
            android:layout_gravity="center|start"
            android:layout_marginVertical="4dp"
            android:background="@drawable/username_email"
            android:gravity="center"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="319dp">

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:lineSpacingExtra="3sp"
                android:text="@string/phone"
                android:textAppearance="@style/label" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/driversLicenseField"
            android:layout_width="fill_parent"
            android:layout_height="40dp"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="@drawable/username_email"
            android:gravity="center_horizontal|center"

            android:orientation="horizontal"

            tools:layout_editor_absoluteX="2dp">

            <TextView
                android:id="@+id/driversLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:layout_marginEnd="55dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/driversLicenseButton"
                android:gravity="start"
                android:text="@string/driversLicense"
                android:textAppearance="@style/label" />

            <Button
                android:id="@+id/driversLicenseButton"
                android:layout_width="105dp"
                android:layout_height="19dp"
                android:layout_marginHorizontal="50dp"
                android:backgroundTint="#000000"
                android:text="@string/addDriversLicense"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="80dp"
        android:background="#E6E6E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backToSignIn" />

    <View
        android:id="@+id/divider2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginBottom="80dp"
        android:background="#E6E6E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backToSignIn"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/backToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/alrUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fieldsWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:text="@string/fieldsWith"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/signIn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttonStyle"/>

    <TextView
        android:id="@+id/signUpNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="178dp"
        android:text="@string/signUpNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:text="@string/checkBox"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>